# hfct

./: README.md  pyproject.toml
src/hfct/: authentication_methods.py  client.py  client_base.py  client_factory.py  client_knltb.py  clients.py  exceptions.py  utils.py
tests/: test_client_knltb.py  test_client_knltb_search_club.py  test_unsupported_client.py
