[tool.poetry]
name = "hfct"
version = "0.1.0"
description = "High Frequency Court Trader"
authors = ["Joris Jansen <joris97jansen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytz = "^2023.3.post1"
requests = "^2.31.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
